--- a/src/torang.yml
+++ b/src/torang.yml
@@ -2,39 +2,15 @@ openapi: 3.0.4
 info:
   title: Swagger Petstore - OpenAPI 3.0
   description: |-
-    This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
-    Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
-    You can now help us improve the API whether it's by making changes to the definition itself or to the code.
+    This is a Torang Server based on the OpenAPI 3.0 specification.  
     That way, with time, we can improve the API in general, and expose some of the new features in OAS3.
 
-    Some useful links:
-    - [The Pet Store repository](https://github.com/swagger-api/swagger-petstore)
-    - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
-  termsOfService: https://swagger.io/terms/
-  contact:
-    email: apiteam@swagger.io
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.12
-externalDocs:
-  description: Find out more about Swagger
-  url: https://swagger.io
 servers:
-  - url: https://petstore3.swagger.io/api/v3
-tags:
-  - name: pet
-    description: Everything about your Pets
-    externalDocs:
-      description: Find out more
-      url: https://swagger.io
-  - name: store
-    description: Access to Petstore orders
-    externalDocs:
-      description: Find out more about our store
-      url: https://swagger.io
-  - name: user
-    description: Operations about user
+  - url: http://sarang628.iptime.org:8081
 paths:
   /pet:
     put:
@@ -505,7 +481,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /user:
+  /getAllUsers:
     post:
       tags:
         - user
@@ -734,6 +710,21 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /feed/findAll:
+    get:
+      tags:
+        - feed
+      parameters:
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/User'
 components:
   schemas:
     Order:
